@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/java/jdk:8-zulu-alpine
+FROM mcr.microsoft.com/openjdk/jdk:11-ubuntu
 ARG APP_FILE=ROOT.war
 ARG TOMCAT_VERSION=9.0.38
 ARG SERVER_XML=server.xml
@@ -15,26 +15,16 @@ ENV LOG_ROOT=/tomcat_logs
 ENV PATH /usr/local/tomcat/bin:$PATH
 
 # Make Java 8 obey container resource limits, improve performance
-ENV JAVA_OPTS "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -Djava.awt.headless=true"
+ENV JAVA_OPTS "-Djava.awt.headless=true"
 
 # Cleanup & Install
-RUN apk add --update openssh-server bash openrc \
-        && rm -rf /var/cache/apk/* \
-        # Remove unnecessary services
-        && rm -f /etc/init.d/hwdrivers \
-                 /etc/init.d/hwclock \
-                 /etc/init.d/mtab \
-                 /etc/init.d/bootmisc \
-                 /etc/init.d/modules \
-                 /etc/init.d/modules-load \
-                 /etc/init.d/modloop \
-        # Install Tomcat
-        && wget -O /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz https://archive.apache.org/dist/tomcat/tomcat-$TOMCAT_MAJOR/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz --no-verbose \
-        && mkdir /usr/local/tomcat \ 
-        && tar xvzf /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz -C /usr/local/tomcat --strip-components 1 \
-        && rm -f /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz \
-         # Remove the sample webapps provided by Tomcat
-        && rm -rf /usr/local/tomcat/webapps/*
+RUN apt-get update -y && \
+    apt-get install -y tar unzip wget && \
+    wget -O /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz https://archive.apache.org/dist/tomcat/tomcat-$TOMCAT_MAJOR/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz --no-verbose && \
+    mkdir /usr/local/tomcat && \ 
+    tar xvzf /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz -C /usr/local/tomcat --strip-components 1 && \
+    rm -f /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
+    rm -rf /usr/local/tomcat/webapps/*
        
 COPY $APP_FILE /usr/local/tomcat/webapps/ROOT.war
 
